--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTPE html>
 <html lang="en">
-<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
+        <title>My First Webpage</title>
+        </head>
 
 </html>
