first page intial commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>My First Webpage</title>
-        </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Webpage</title>
+</head>
 <body>
-
-    
+    Hello World! My name is James and I cannot sleep.
 </body>
 </html>
