getting going, into links and images on the odin project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>My First Webpage</title>
 </head>
 <body>
-    Hello World! My name is James and I cannot sleep.
+    <h1>Hello World! My name is <em>James</em> and I cannot sleep.</h1>
+    <h2>This webpage is from my lessons on The Odin Project</h2>
+    <p>Will you join me on my travels to Valhalla</p><!--  -->
+    <!-- this is just a comment and not meant for anything real-->
+    <!-- we are going to create an unorderd list for the next lesson,
+    unordered list have bullet points-->
+    <h3>The Odin Project Lessons: Lists</h3>
+    <p>This is an unordered list: is made with bullet points</p>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>What the shit?</li>
+    </ul>
+    <!-- we are going to make a ordered list, ordered list have numbers and arranged
+    in numerical order-->
+    <p>This is an ordered list: they are made with numbers in numerical order</p>
+    <ol>
+        <li>Ordered Item 1</li>
+        <li>Ordered Item 2</li>
+        <li>Ordered Item 3</li>
+        <li>Maga poopie 434</li>
+    </ol>
+    <!-- next lesson is abnout creating links and adding some visual flair to 
+    our page: We will learn the following
+    -->
+    <h3>The Odin Project Lessons: Links and Images</h3>
+    <p>In this lesson we will learn the following</p>
+    <ul>
+        <li>How to create links to pages on other websites on the internet</li>
+        <li>How to create link to other pages on your own websites</li>
+        <li>The difference between absolute and realtive links</li>
+        <li>How to display an image on a webpage using HTML</li>
+    </ul>
+
 </body>
 </html>
