getting through there, at forty percent complete

--- a/index.html
+++ b/index.html
@@ -37,10 +37,51 @@
     <p>In this lesson we will learn the following</p>
     <ul>
         <li>How to create links to pages on other websites on the internet</li>
+        <a href="https://www.theodinproject.com/about">Click Me</a>
+        <!-- we create a link to another page with the <a href="thewebpagebeinglinked">
+            tag, do not forget your closing tags-->
         <li>How to create link to other pages on your own websites</li>
         <li>The difference between absolute and realtive links</li>
         <li>How to display an image on a webpage using HTML</li>
     </ul>
-
+    <p>Absolute links are links to content on another page, they will always contain
+        the 
+        <a href="https://www.theodinproject.com/lessons/foundations-links-and-images">protocol://domain/path format/</a>    </p>
+        <p>Relative links are links to pages within our own website, like to go from menu to about us pages</p>
+        <p>This works as long as the pages being traversed are within the same directory, 
+            if not then you need to add to the link.</p>
+        <h4>Images</h4>
+        <p>You can add images to the page with an &lt;img&gt; tag. These are self closing tags, 
+            that work in the same manor as relative and absolute links. You can also add alt text to an image
+            for when the image doesn't load.
+        </p>
+        <h2>Commit messages</h2>
+        <p>In this lesson we learn about the following</p>
+        <ol>
+            <li>How to write meaningful commit messages</li>
+            <li>Why meaningful messages are important</li>
+            <li>When to Commit</li>
+            <p>Yes, commit messages are important enough to warrent their own lesson. Those reasons are</p>
+            <ul>
+                <li>When applying for jobs employers will look through your commits, this could help you stand out, 
+                    especially early in oyur career
+                </li>
+                <li>With a good commit history the team your are working with will be able to see where bugs have poped up</li>
+                <li>It will also allow you to get back to work quicly on projects that have been on the shelf for a while.</li>
+            </ul>
+            <p>When you commit is also important for reason like:</p>
+            <ul>
+                <li>Commiting is like taking a snapshot of you code at that time, allowing you to revert back
+                    when a bug happens, or when trying something new doesn't work the way you thought.
+                </li>
+                <li>It is considered best practice to make a commit with every meaningful code change.
+                    This could mean anything from a bug, typo correction to even you have gained experiance and improved
+                    the code of the page.
+                </li>
+                <li>It is even a good idea to commit when things are finally working the way they are suppose to.
+                    This way when it does break you at least have a reference to time it worked properly.
+                </li>
+            </ul>
+        </ol>
 </body>
 </html>
